--- a/teaching.html
+++ b/teaching.html
@@ -312,26 +312,32 @@ $(document).ready(function () {
 Klarman Hall, Harvard Business School
 </p>
 </div>
-<div id="harvard-university-harvard-business-school" class="section level1">
+<div id="harvard-university-harvard-business-school"
+class="section level1">
 <h1>Harvard University – Harvard Business School</h1>
 <ul>
-<li>Technology and Operations Management – Required Curriculum Fall ’19</li>
+<li>Technology and Operations Management – Required Curriculum Fall
+’19</li>
 <li>Technology and Operations Management – Required Curriculum Fall ’20
 <ul>
-<li><a href="https://calebkwon.com/rctom_reviews">Please click here for teaching evaluations</a></li>
+<li><a href="https://calebkwon.com/rctom_reviews">Please click here for
+teaching evaluations</a></li>
 </ul></li>
 </ul>
 </div>
-<div id="the-university-of-chicago-booth-school-of-business" class="section level1">
+<div id="the-university-of-chicago-booth-school-of-business"
+class="section level1">
 <h1>The University of Chicago – Booth School of Business</h1>
 <ul>
 <li>Operations Management Executive Education – Spring 2022</li>
 </ul>
 </div>
-<div id="northwestern-university-kellogg-school-of-management" class="section level1">
+<div id="northwestern-university-kellogg-school-of-management"
+class="section level1">
 <h1>Northwestern University – Kellogg School of Management</h1>
 <ul>
-<li>Undergraduate Courses: Principles of Finance, Foreign Exchange Markets, Derivatives I, Derivatives II</li>
+<li>Undergraduate Courses: Principles of Finance, Foreign Exchange
+Markets, Derivatives I, Derivatives II</li>
 <li>MBA: Finance I, Finance II, Tax Strategy, Business Strategy</li>
 </ul>
 </div>
