--- a/CV.html
+++ b/CV.html
@@ -308,7 +308,9 @@ $(document).ready(function () {
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
 <div id="curriculum-vitae" class="section level1">
 <h1>Curriculum Vitae</h1>
-<p><a href="https://www.dropbox.com/s/34rby97o4o7gqw3/res4.pdf?raw=1">PDF Version</a></p>
+<p><a
+href="https://www.dropbox.com/s/34rby97o4o7gqw3/res4.pdf?raw=1">PDF
+Version</a></p>
 </div>
 <div id="personal-information" class="section level1">
 <h1>Personal Information</h1>
@@ -322,7 +324,8 @@ $(document).ready(function () {
 <div id="education" class="section level1">
 <h1>Education</h1>
 <ul>
-<li>Ph.D. in Operations Management, Harvard University, 2019 – 2024 (Expected)
+<li>Ph.D. in Operations Management, Harvard University, 2019 – 2024
+(Expected)
 <ul>
 <li>Committe Chair: Professor Ananth Raman</li>
 </ul></li>
@@ -337,8 +340,10 @@ $(document).ready(function () {
 <div id="awards-and-honors" class="section level1">
 <h1>Awards and Honors</h1>
 <ul>
-<li>Winner, POMS College of Sustainable Operations: Best Student Paper (2021)</li>
-<li>Dean’s Medal (Faculty of Arts &amp; Social Sciences): Rank 1 of approximately 2,400 (2015)</li>
+<li>Winner, POMS College of Sustainable Operations: Best Student Paper
+(2021)</li>
+<li>Dean’s Medal (Faculty of Arts &amp; Social Sciences): Rank 1 of
+approximately 2,400 (2015)</li>
 <li>Jack L. Knetsch Award for Best Thesis in Economics (2015)</li>
 <li>Cliff Lloyd Memorial Award for Highest GPA in Economics (2015)</li>
 </ul>
@@ -346,12 +351,19 @@ $(document).ready(function () {
 <div id="research-assistantships" class="section level1">
 <h1>Research Assistantships</h1>
 <ul>
-<li><a href="https://sites.northwestern.edu/jlh951/">Professor Joel Horowitz</a> (Econometric Theory)
+<li><a href="https://sites.northwestern.edu/jlh951/">Professor Joel
+Horowitz</a> (Econometric Theory)
 <ul>
-<li>Research assistant for <a href="https://www.sciencedirect.com/science/article/pii/S0304407620303353">Bounding the Difference between true and nominal rejection probabilities in tests of hypotheses about instrumental variables models</a></li>
+<li>Research assistant for <a
+href="https://www.sciencedirect.com/science/article/pii/S0304407620303353">Bounding
+the Difference between true and nominal rejection probabilities in tests
+of hypotheses about instrumental variables models</a></li>
 </ul></li>
-<li><a href="http://deankarlan.com/">Professor Dean Karlan</a> (Applied Microeconomics)</li>
-<li><a href="https://www.kellogg.northwestern.edu/faculty/jagannathan/htm/">Professor Ravi Jagannathan</a> (Financial Econometrics)</li>
+<li><a href="http://deankarlan.com/">Professor Dean Karlan</a> (Applied
+Microeconomics)</li>
+<li><a
+href="https://www.kellogg.northwestern.edu/faculty/jagannathan/htm/">Professor
+Ravi Jagannathan</a> (Financial Econometrics)</li>
 </ul>
 </div>
 
