--- a/index.html
+++ b/index.html
@@ -296,6 +296,9 @@ $(document).ready(function () {
 </div>
 
 
+<!-- ```{r setup, include=FALSE} -->
+<!-- knitr::opts_chunk$set(dpi=320,fig.width=9) -->
+<!-- ``` -->
 <!-- <script> -->
 <!--    $(document).ready(function() { -->
 <!--      $head = $('#header'); -->
@@ -311,52 +314,66 @@ $(document).ready(function () {
 
   gtag('config', 'UA-165847699-1');
 </script>
-<p><img src="images/caleb_1.jpg" width="45%" /></p>
-<div style="margin-bottom:25px;">
-
-</div>
+<p><img src="images/caleb_1.jpg" width="40%" /></p>
+<!-- <div style="margin-bottom:25px;"> -->
+<!-- </div> -->
 <!-- <img src="images/caleb_light.jfif" height = "300" style ="display:block; margin-left: auto; margin-right:auto;"> -->
-<style type="text/css">
-    /* default styles here for older browsers. 
-       I tend to go for a 600px - 960px width max but using percentages
-    */
-    @media only screen and (min-width: 960px) {
-        /* styles for browsers larger than 960px; */
-    }
-    @media only screen and (min-width: 1440px) {
-        /* styles for browsers larger than 1440px; */
-    }
-    @media only screen and (min-width: 2000px) {
-        /* for sumo sized (mac) screens */
-    }
-    @media only screen and (max-device-width: 480px) {
-       /* styles for mobile browsers smaller than 480px; (iPhone) */
-    }
-    @media only screen and (device-width: 768px) {
-       /* default iPad screens */
-    }
-    /* different techniques for iPad screening */
-    @media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait) {
-      /* For portrait layouts only */
-    }
-
-    @media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:landscape) {
-      /* For landscape layouts only */
-    }
-</style>
+<!-- <style type="text/css"> -->
+<!--     /* default styles here for older browsers.  -->
+<!--        I tend to go for a 600px - 960px width max but using percentages -->
+<!--     */ -->
+<!--     @media only screen and (min-width: 960px) { -->
+<!--         /* styles for browsers larger than 960px; */ -->
+<!--     } -->
+<!--     @media only screen and (min-width: 1440px) { -->
+<!--         /* styles for browsers larger than 1440px; */ -->
+<!--     } -->
+<!--     @media only screen and (min-width: 2000px) { -->
+<!--         /* for sumo sized (mac) screens */ -->
+<!--     } -->
+<!--     @media only screen and (max-device-width: 480px) { -->
+<!--        /* styles for mobile browsers smaller than 480px; (iPhone) */ -->
+<!--     } -->
+<!--     @media only screen and (device-width: 768px) { -->
+<!--        /* default iPad screens */ -->
+<!--     } -->
+<!--     /* different techniques for iPad screening */ -->
+<!--     @media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait) { -->
+<!--       /* For portrait layouts only */ -->
+<!--     } -->
+<!--     @media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:landscape) { -->
+<!--       /* For landscape layouts only */ -->
+<!--     } -->
+<!-- </style> -->
 <hr />
 <div id="caleb-kwon" class="section level1">
 <h1>Caleb Kwon</h1>
-<p>I’m a 3rd year PhD Candidate in Operations Management at Harvard University.</p>
-<p>My dissertation explores the associations between managerial talent, labor scheduling decisions, and firm performance. Please see the <a href="https://calebkwon.com/research.html">Research</a> tab for my papers. My dissertation committee consists of Professors <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth Raman</a> (Chairperson), <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1029325">Antonio Moreno</a>, and <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1063486">Jorge Tamayo</a>.</p>
-<p>Prior to Harvard, I received a B.A. in Economics from Simon Fraser University, and an M.A in Economics from Northwestern University.</p>
+<p>I’m a 3rd year PhD Candidate in Operations Management at Harvard
+University.</p>
+<p>My dissertation explores the associations between managerial talent,
+labor scheduling decisions, and firm performance. Please see the <a
+href="https://calebkwon.com/research.html">Research</a> tab for my
+papers. My dissertation committee consists of Professors <a
+href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
+Raman</a> (Chairperson), <a
+href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1029325">Antonio
+Moreno</a>, and <a
+href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1063486">Jorge
+Tamayo</a>.</p>
+<p>Prior to Harvard, I received a B.A. in Economics from Simon Fraser
+University, and an M.A in Economics from Northwestern University.</p>
 </div>
 <div id="about-me" class="section level1">
 <h1>About Me:</h1>
 <ul>
-<li><a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1160260">Harvard Business School Profile</a></li>
-<li><a href="https://calebkwon.com/CV.html">Curriculum Vitae/Resume</a></li>
-<li><a href="https://scholar.google.com/citations?user=mBw3GmIAAAAJ">Google Scholar Profile</a></li>
+<li><a
+href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1160260">Harvard
+Business School Profile</a></li>
+<li><a href="https://calebkwon.com/CV.html">Curriculum
+Vitae/Resume</a></li>
+<li><a
+href="https://scholar.google.com/citations?user=mBw3GmIAAAAJ">Google
+Scholar Profile</a></li>
 </ul>
 </div>
 
