--- a/research.html
+++ b/research.html
@@ -308,63 +308,127 @@ $(document).ready(function () {
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
 <div id="academic-papers" class="section level1">
 <h1>Academic Papers</h1>
-<div id="estimation-of-the-number-of-components-in-nonparametric-multivariate-finite-mixture-models-2021-with-eric-mbakop." class="section level2">
-<h2>1. <a href="https://www.dropbox.com/s/8sp441qoleeijtf/AOS2032.pdf?dl=0">Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models (2021)</a> with <a href="https://wpsites.ucalgary.ca/eric-mbakop/">Eric Mbakop</a>.</h2>
+<div
+id="estimation-of-the-number-of-components-in-nonparametric-multivariate-finite-mixture-models-2021-with-eric-mbakop."
+class="section level2">
+<h2>1. <a
+href="https://www.dropbox.com/s/8sp441qoleeijtf/AOS2032.pdf?dl=0">Estimation
+of the Number of Components in Nonparametric Multivariate Finite Mixture
+Models (2021)</a> with <a
+href="https://wpsites.ucalgary.ca/eric-mbakop/">Eric Mbakop</a>.</h2>
 <div id="annals-of-statistics-august-2021" class="section level3">
 <h3><strong>Annals of Statistics</strong> (August, 2021)</h3>
 <hr />
 </div>
 </div>
-<div id="supply-chain-disruptions-evidence-from-the-bankruptcy-of-hanjin-shipping-2021" class="section level2">
-<h2>2. <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3293272">Supply Chain Disruptions: Evidence from the Bankruptcy of Hanjin Shipping (2021)</a></h2>
+<div
+id="supply-chain-disruptions-evidence-from-the-bankruptcy-of-hanjin-shipping-2021"
+class="section level2">
+<h2>2. <a
+href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3293272">Supply
+Chain Disruptions: Evidence from the Bankruptcy of Hanjin Shipping
+(2021)</a></h2>
 <div id="under-revision-for-submission." class="section level3">
 <h3>Under revision for submission.</h3>
 <hr />
 </div>
 </div>
-<div id="disclosure-driven-social-engagement-in-supply-chains-2021-with-andrew-di-wu." class="section level2">
-<h2>3. <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3900182">Disclosure-Driven Social Engagement in Supply Chains (2021)</a> with <a href="https://sites.google.com/site/diandrewwu/">Andrew Di Wu</a>.</h2>
+<div
+id="disclosure-driven-social-engagement-in-supply-chains-2021-with-andrew-di-wu."
+class="section level2">
+<h2>3. <a
+href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3900182">Disclosure-Driven
+Social Engagement in Supply Chains (2021)</a> with <a
+href="https://sites.google.com/site/diandrewwu/">Andrew Di Wu</a>.</h2>
 <div id="major-revision-1st-round-at-msom" class="section level3">
 <h3><em>Major Revision (1st Round)</em> at <strong>MSOM</strong></h3>
 </div>
-<div id="winner-poms-college-of-sustainable-operations-best-student-paper-competition" class="section level3">
-<h3><a href="https://poms.org/colleges/csustops/">Winner: POMS College of Sustainable Operations, Best Student Paper Competition</a></h3>
+<div
+id="winner-poms-college-of-sustainable-operations-best-student-paper-competition"
+class="section level3">
+<h3><a href="https://poms.org/colleges/csustops/">Winner: POMS College
+of Sustainable Operations, Best Student Paper Competition</a></h3>
 <hr />
 </div>
 </div>
-<div id="the-costs-and-benefits-of-flexible-labor-with-ananth-raman." class="section level2">
-<h2>4. The Costs and Benefits of Flexible Labor with <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth Raman</a>.</h2>
+<div id="the-costs-and-benefits-of-flexible-labor-with-ananth-raman."
+class="section level2">
+<h2>4. The Costs and Benefits of Flexible Labor with <a
+href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
+Raman</a>.</h2>
 <hr />
 </div>
-<div id="managers-labor-scheduling-decisions-and-retail-store-store-performance-with-jorge-tamayo-and-ananth-raman." class="section level2">
-<h2>5. Manager’s Labor Scheduling Decisions and Retail Store Store Performance with <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1063486">Jorge Tamayo</a> and <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth Raman</a>.</h2>
+<div
+id="managers-labor-scheduling-decisions-and-retail-store-store-performance-with-jorge-tamayo-and-ananth-raman."
+class="section level2">
+<h2>5. Manager’s Labor Scheduling Decisions and Retail Store Store
+Performance with <a
+href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1063486">Jorge
+Tamayo</a> and <a
+href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
+Raman</a>.</h2>
 <hr />
 </div>
 </div>
 <div id="cases-and-teaching-material" class="section level1">
 <h1>Cases and Teaching Material:</h1>
-<div id="getting-started-in-r-cloud-studio-with-chiara-farronato." class="section level2">
-<h2>1. <a href="https://www.hbs.edu/faculty/Pages/item.aspx?num=59552">Getting Started in R Cloud Studio</a> with <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=775022">Chiara Farronato</a>.</h2>
-<div id="harvard-business-school-tutorial-621-708-february-2021" class="section level3">
-<h3><strong>Harvard Business School Tutorial 621-708</strong>, February 2021</h3>
+<div id="getting-started-in-r-cloud-studio-with-chiara-farronato."
+class="section level2">
+<h2>1. <a
+href="https://www.hbs.edu/faculty/Pages/item.aspx?num=59552">Getting
+Started in R Cloud Studio</a> with <a
+href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=775022">Chiara
+Farronato</a>.</h2>
+<div id="harvard-business-school-tutorial-621-708-february-2021"
+class="section level3">
+<h3><strong>Harvard Business School Tutorial 621-708</strong>, February
+2021</h3>
 </div>
 </div>
-<div id="innovation-at-uber-the-launch-of-express-pool-assignment-solutions-video-with-chiara-farronato." class="section level2">
-<h2>2. <a href="https://www.hbs.edu/faculty/Pages/item.aspx?num=61245">Innovation at Uber: The Launch of Express POOL Assignment Solutions Video</a> with <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=775022">Chiara Farronato</a>.</h2>
-<div id="harvard-business-school-multimediavideo-supplement-622-704-january-2022" class="section level3">
-<h3><strong>Harvard Business School Multimedia/Video Supplement 622-704</strong>, January 2022</h3>
+<div
+id="innovation-at-uber-the-launch-of-express-pool-assignment-solutions-video-with-chiara-farronato."
+class="section level2">
+<h2>2. <a
+href="https://www.hbs.edu/faculty/Pages/item.aspx?num=61245">Innovation
+at Uber: The Launch of Express POOL Assignment Solutions Video</a> with
+<a
+href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=775022">Chiara
+Farronato</a>.</h2>
+<div
+id="harvard-business-school-multimediavideo-supplement-622-704-january-2022"
+class="section level3">
+<h3><strong>Harvard Business School Multimedia/Video Supplement
+622-704</strong>, January 2022</h3>
 </div>
 </div>
-<div id="innovation-at-uber-the-launch-of-express-pool-assignment-solutions-comparing-commuting-and-non-commuting-hours-with-chiara-farronato." class="section level2">
-<h2>3. <a href="https://www.hbs.edu/faculty/Pages/item.aspx?num=61244">Innovation at Uber: The Launch of Express POOL Assignment Solutions: Comparing Commuting and Non-Commuting Hours</a> with <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=775022">Chiara Farronato</a>.</h2>
-<div id="harvard-business-school-teaching-note-622-054-january-2022" class="section level3">
-<h3><strong>Harvard Business School Teaching Note 622-054</strong>, January 2022</h3>
+<div
+id="innovation-at-uber-the-launch-of-express-pool-assignment-solutions-comparing-commuting-and-non-commuting-hours-with-chiara-farronato."
+class="section level2">
+<h2>3. <a
+href="https://www.hbs.edu/faculty/Pages/item.aspx?num=61244">Innovation
+at Uber: The Launch of Express POOL Assignment Solutions: Comparing
+Commuting and Non-Commuting Hours</a> with <a
+href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=775022">Chiara
+Farronato</a>.</h2>
+<div id="harvard-business-school-teaching-note-622-054-january-2022"
+class="section level3">
+<h3><strong>Harvard Business School Teaching Note 622-054</strong>,
+January 2022</h3>
 </div>
 </div>
-<div id="innovation-at-uber-the-launch-of-express-pool-assignment-comparing-commuting-and-non-commuting-hours-with-chiara-farronato." class="section level2">
-<h2>4. <a href="http://hbr.org/product/Innovation-at-Uber--The-L/an/622053-PDF-ENG">Innovation at Uber: The Launch of Express POOL Assignment: Comparing Commuting and Non-Commuting Hours</a> with <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=775022">Chiara Farronato</a>.</h2>
-<div id="harvard-business-school-supplement-622-053-january-2022" class="section level3">
-<h3><strong>Harvard Business School Supplement 622-053</strong>, January 2022</h3>
+<div
+id="innovation-at-uber-the-launch-of-express-pool-assignment-comparing-commuting-and-non-commuting-hours-with-chiara-farronato."
+class="section level2">
+<h2>4. <a
+href="http://hbr.org/product/Innovation-at-Uber--The-L/an/622053-PDF-ENG">Innovation
+at Uber: The Launch of Express POOL Assignment: Comparing Commuting and
+Non-Commuting Hours</a> with <a
+href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=775022">Chiara
+Farronato</a>.</h2>
+<div id="harvard-business-school-supplement-622-053-january-2022"
+class="section level3">
+<h3><strong>Harvard Business School Supplement 622-053</strong>, January
+2022</h3>
 <hr />
 </div>
 </div>
