--- a/research.html
+++ b/research.html
@@ -351,18 +351,32 @@ of Sustainable Operations, Best Student Paper Competition</a></h3>
 <hr />
 </div>
 </div>
-<div id="the-costs-and-benefits-of-flexible-labor-with-ananth-raman."
+<div id="lateness-and-absenteeism-in-retail-stores-with-ananth-raman."
 class="section level2">
-<h2>4. The Costs and Benefits of Flexible Labor with <a
+<h2>4. <a
+href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4189723">Lateness
+and Absenteeism in Retail Stores</a> with <a
+href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
+Raman</a>.</h2>
+<div id="submitted." class="section level3">
+<h3>Submitted.</h3>
+<hr />
+</div>
+</div>
+<div
+id="human-computer-interactions-in-labor-scheduling-decisions-with-jorge-tamayo-and-ananth-raman."
+class="section level2">
+<h2>5. Human-Computer Interactions in Labor Scheduling Decisions with <a
+href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1063486">Jorge
+Tamayo</a> and <a
 href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
 Raman</a>.</h2>
 <hr />
 </div>
 <div
-id="managers-labor-scheduling-decisions-and-retail-store-store-performance-with-jorge-tamayo-and-ananth-raman."
+id="manager-performance-and-labor-scheduling-practices-with-jorge-tamayo-and-ananth-raman."
 class="section level2">
-<h2>5. Manager’s Labor Scheduling Decisions and Retail Store Store
-Performance with <a
+<h2>6. Manager Performance and Labor Scheduling Practices with <a
 href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1063486">Jorge
 Tamayo</a> and <a
 href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
