--- a/research.html
+++ b/research.html
@@ -328,8 +328,8 @@ class="section level2">
 href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3293272">Supply
 Chain Disruptions: Evidence from the Bankruptcy of Hanjin Shipping
 (2021)</a></h2>
-<div id="under-revision-for-submission." class="section level3">
-<h3>Under revision for submission.</h3>
+<div id="under-revision." class="section level3">
+<h3>Under revision.</h3>
 <hr />
 </div>
 </div>
