--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ $(document).ready(function () {
 <div id="caleb-kwon" class="section level1">
 <h1>Caleb Kwon</h1>
 <p>I’m a 4th year PhD Candidate in Operations Management at Harvard
-University. I am very fortunate to be advised by Professor <a
+University. I am advised by Professor <a
 href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
 Raman</a>.</p>
 <p>My dissertation explores the associations between managerial talent,
