--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@ the effects of micro-level decisions made by managers on store outcomes.
 Please see the <a
 href="https://calebkwon.com/research.html">Research</a> tab for my
 papers.</p>
-<p>In addition to my academic research, I have been involved in various teaching
+<p>In addition to my research, I have been involved in various teaching
 assignments during my PhD. At Harvard, I have served as a teaching
 fellow in the full-time MBA program at HBS, and was an executive coach
 in the <a
