--- a/research.html
+++ b/research.html
@@ -351,11 +351,13 @@ of Sustainable Operations, Best Student Paper Competition</a></h3>
 <hr />
 </div>
 </div>
-<div id="lateness-and-absenteeism-in-retail-stores-with-ananth-raman."
+<div
+id="the-effect-of-employee-lateness-and-absenteeism-on-store-performance-with-ananth-raman."
 class="section level2">
 <h2>4. <a
-href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4189723">Lateness
-and Absenteeism in Retail Stores</a> with <a
+href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4189723">The
+Effect of Employee Lateness and Absenteeism on Store Performance</a>
+with <a
 href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
 Raman</a>.</h2>
 <div id="submitted." class="section level3">
