--- a/index.html
+++ b/index.html
@@ -357,10 +357,9 @@ University. I am advised by Professor <a
 href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
 Raman</a>.</p>
 <p>My dissertation explores the associations between managerial talent,
-labor scheduling decisions, and firm performance. My research leverages
-“big data” obtained from various retailers and tech companies to analyze
-the effects of micro-level decisions made by managers on store outcomes.
-Please see the <a
+labor scheduling decisions, and firm performance. In addition, I am
+interested in how retailers use algorithms to automate their labor
+scheduling decisions. Please see the <a
 href="https://calebkwon.com/research.html">Research</a> tab for my
 papers.</p>
 <p>In addition to my research, I have been involved in various teaching
