--- a/research.html
+++ b/research.html
@@ -318,7 +318,10 @@ Models (2021)</a> with <a
 href="https://wpsites.ucalgary.ca/eric-mbakop/">Eric Mbakop</a>.</h2>
 <div id="annals-of-statistics-august-2021" class="section level3">
 <h3><strong>Annals of Statistics</strong> (August, 2021)</h3>
+<div id="hello" class="section level5">
+<h5>Hello</h5>
 <hr />
+</div>
 </div>
 </div>
 <div
@@ -340,8 +343,10 @@ class="section level2">
 href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3900182">Disclosure-Driven
 Social Engagement in Supply Chains (2021)</a> with <a
 href="https://sites.google.com/site/diandrewwu/">Andrew Di Wu</a>.</h2>
-<div id="major-revision-1st-round-at-msom" class="section level3">
-<h3><em>Major Revision (1st Round)</em> at <strong>MSOM</strong></h3>
+<div id="major-revision-at-manufacturing-service-operations-management"
+class="section level3">
+<h3><em>Major Revision</em> at <strong>Manufacturing &amp; Service
+Operations Management</strong></h3>
 </div>
 <div
 id="winner-poms-college-of-sustainable-operations-best-student-paper-competition"
@@ -360,27 +365,58 @@ Effect of Employee Lateness and Absenteeism on Store Performance</a>
 with <a
 href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
 Raman</a>.</h2>
-<div id="submitted." class="section level3">
-<h3>Submitted.</h3>
+<div id="submitted-please-email-for-draft" class="section level3">
+<h3>Submitted (Please Email for Draft)</h3>
 <hr />
 </div>
 </div>
 <div
-id="human-computer-interactions-in-labor-scheduling-decisions-with-jorge-tamayo-and-ananth-raman."
+id="human-computer-interactions-in-labor-scheduling-decisions-with-ananth-raman-and-jorge-tamayo"
 class="section level2">
 <h2>5. Human-Computer Interactions in Labor Scheduling Decisions with <a
+href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
+Raman</a> and <a
 href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1063486">Jorge
-Tamayo</a> and <a
+Tamayo</a></h2>
+<div id="submitted-please-email-for-draft-1" class="section level3">
+<h3>Submitted (Please Email for Draft)</h3>
+<hr />
+</div>
+</div>
+<div
+id="the-effects-of-fair-workweek-laws-on-store-performance-evidence-from-chicago-ananth-raman."
+class="section level2">
+<h2>6. The Effects of Fair Workweek Laws on Store Performance: Evidence
+from Chicago <a
+href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
+Raman</a>.</h2>
+<div id="submitted-please-email-for-draft-2" class="section level3">
+<h3>Submitted (Please Email for Draft)</h3>
+<hr />
+</div>
+</div>
+<div
+id="manager-performance-and-labor-scheduling-practices-with-ananth-raman."
+class="section level2">
+<h2>7. Manager Performance and Labor Scheduling Practices with <a
 href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
 Raman</a>.</h2>
 <hr />
 </div>
 <div
-id="manager-performance-and-labor-scheduling-practices-with-jorge-tamayo-and-ananth-raman."
+id="the-effects-of-the-minimum-wage-on-labor-scheduling-practices-with-ananth-raman."
 class="section level2">
-<h2>6. Manager Performance and Labor Scheduling Practices with <a
-href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1063486">Jorge
-Tamayo</a> and <a
+<h2>8. The Effects of the Minimum Wage on Labor Scheduling Practices
+with <a
+href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
+Raman</a>.</h2>
+<hr />
+</div>
+<div
+id="on-the-interactions-between-the-minimum-wage-and-fair-workweek-laws-ananth-raman."
+class="section level2">
+<h2>9. On the Interactions Between the Minimum Wage and Fair Workweek
+Laws <a
 href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
 Raman</a>.</h2>
 <hr />
