--- a/index.html
+++ b/index.html
@@ -348,7 +348,8 @@ $(document).ready(function () {
 <!--       /* For landscape layouts only */ -->
 <!--     } -->
 <!-- </style> -->
-<p><img src="images/caleb_1.jpg" alt="Nature" class="responsive" width = 400></p>
+<!-- <img src="images/caleb_1.jpg" alt="Nature" class="responsive" width = 400> -->
+<p><img src="images/caleb_pic_new.png" alt="Nature" class="responsive" width = 400></p>
 <hr />
 <div id="caleb-kwon" class="section level1">
 <h1>Caleb Kwon</h1>
