--- a/research.html
+++ b/research.html
@@ -318,10 +318,7 @@ Models (2021)</a> with <a
 href="https://wpsites.ucalgary.ca/eric-mbakop/">Eric Mbakop</a>.</h2>
 <div id="annals-of-statistics-august-2021" class="section level3">
 <h3><strong>Annals of Statistics</strong> (August, 2021)</h3>
-<div id="hello" class="section level5">
-<h5>Hello</h5>
 <hr />
-</div>
 </div>
 </div>
 <div
@@ -371,27 +368,30 @@ Raman</a>.</h2>
 </div>
 </div>
 <div
-id="human-computer-interactions-in-labor-scheduling-decisions-with-ananth-raman-and-jorge-tamayo"
+id="human-computer-interactions-in-demand-forecasting-and-labor-scheduling-decisions-with-ananth-raman-and-jorge-tamayo"
 class="section level2">
-<h2>5. Human-Computer Interactions in Labor Scheduling Decisions with <a
+<h2>5. <a
+href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4296344">Human-Computer
+Interactions in Demand Forecasting and Labor Scheduling Decisions</a>
+with <a
 href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
 Raman</a> and <a
 href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1063486">Jorge
 Tamayo</a></h2>
-<div id="submitted-please-email-for-draft-1" class="section level3">
-<h3>Submitted (Please Email for Draft)</h3>
+<div id="submitted" class="section level3">
+<h3>Submitted</h3>
 <hr />
 </div>
 </div>
 <div
-id="the-effects-of-fair-workweek-laws-on-store-performance-evidence-from-chicago-ananth-raman."
+id="the-effects-of-fair-workweek-laws-on-store-performance-evidence-from-chicago-with-ananth-raman."
 class="section level2">
 <h2>6. The Effects of Fair Workweek Laws on Store Performance: Evidence
-from Chicago <a
+from Chicago with <a
 href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
 Raman</a>.</h2>
-<div id="submitted-please-email-for-draft-2" class="section level3">
-<h3>Submitted (Please Email for Draft)</h3>
+<div id="please-email-for-draft" class="section level3">
+<h3>Please Email for Draft</h3>
 <hr />
 </div>
 </div>
@@ -411,15 +411,8 @@ with <a
 href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
 Raman</a>.</h2>
 <hr />
-</div>
-<div
-id="on-the-interactions-between-the-minimum-wage-and-fair-workweek-laws-ananth-raman."
-class="section level2">
-<h2>9. On the Interactions Between the Minimum Wage and Fair Workweek
-Laws <a
-href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
-Raman</a>.</h2>
-<hr />
+<!-- ## 9. On the Interactions Between the Minimum Wage and Fair Workweek Laws  [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534). -->
+<!-- --- -->
 </div>
 </div>
 <div id="cases-and-teaching-material" class="section level1">
