--- a/research.html
+++ b/research.html
@@ -386,12 +386,14 @@ Tamayo</a></h2>
 <div
 id="the-effects-of-fair-workweek-laws-on-store-performance-evidence-from-chicago-with-ananth-raman."
 class="section level2">
-<h2>6. The Effects of Fair Workweek Laws on Store Performance: Evidence
-from Chicago with <a
+<h2>6. <a
+href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4351186">The
+Effects of Fair Workweek Laws on Store Performance: Evidence from
+Chicago</a> with <a
 href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
 Raman</a>.</h2>
-<div id="please-email-for-draft" class="section level3">
-<h3>Please Email for Draft</h3>
+<div id="submitted-1" class="section level3">
+<h3>Submitted</h3>
 <hr />
 </div>
 </div>
