--- a/research.html
+++ b/research.html
@@ -381,26 +381,15 @@ Tamayo</a></h2>
 <div id="submitted" class="section level3">
 <h3>Submitted</h3>
 <hr />
-</div>
-</div>
-<div
-id="the-effects-of-fair-workweek-laws-on-store-performance-evidence-from-chicago-with-ananth-raman."
-class="section level2">
-<h2>6. <a
-href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4351186">The
-Effects of Fair Workweek Laws on Store Performance: Evidence from
-Chicago</a> with <a
-href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
-Raman</a>.</h2>
-<div id="submitted-1" class="section level3">
-<h3>Submitted</h3>
-<hr />
+<!-- ## 6. [The Effects of Fair Workweek Laws on Store Performance: Evidence from Chicago](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4351186) with [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534). -->
+<!-- ### Submitted -->
+<!-- --- -->
 </div>
 </div>
 <div
 id="manager-performance-and-labor-scheduling-practices-with-ananth-raman."
 class="section level2">
-<h2>7. Manager Performance and Labor Scheduling Practices with <a
+<h2>6. Manager Performance and Labor Scheduling Practices with <a
 href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
 Raman</a>.</h2>
 <hr />
@@ -408,7 +397,7 @@ Raman</a>.</h2>
 <div
 id="the-effects-of-the-minimum-wage-on-labor-scheduling-practices-with-ananth-raman."
 class="section level2">
-<h2>8. The Effects of the Minimum Wage on Labor Scheduling Practices
+<h2>7. The Effects of the Minimum Wage on Labor Scheduling Practices
 with <a
 href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
 Raman</a>.</h2>
