--- a/research.html
+++ b/research.html
@@ -357,13 +357,19 @@ of Sustainable Operations, Best Student Paper Competition</a></h3>
 id="the-effect-of-employee-lateness-and-absenteeism-on-store-performance-with-ananth-raman."
 class="section level2">
 <h2>4. <a
-href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4189723">The
+href="https://www.dropbox.com/s/hqu3u7kst8qtkc9/Lateness_and_Absenteeism.pdf?raw=1">The
 Effect of Employee Lateness and Absenteeism on Store Performance</a>
 with <a
 href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
 Raman</a>.</h2>
-<div id="submitted-please-email-for-draft" class="section level3">
-<h3>Submitted (Please Email for Draft)</h3>
+<div id="under-revision" class="section level3">
+<h3>Under Revision</h3>
+</div>
+<div id="ssrn-link" class="section level3">
+<h3><a
+href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4189723">SSRN
+Link</a></h3>
+<!-- ### [Dropbox Link](https://www.dropbox.com/s/hqu3u7kst8qtkc9/Lateness_and_Absenteeism.pdf?raw=1), [SSRN Link](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4189723) -->
 <hr />
 </div>
 </div>
