--- a/research.html
+++ b/research.html
@@ -340,10 +340,10 @@ class="section level2">
 href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3900182">Disclosure-Driven
 Social Engagement in Supply Chains (2021)</a> with <a
 href="https://sites.google.com/site/diandrewwu/">Andrew Di Wu</a>.</h2>
-<div id="major-revision-at-manufacturing-service-operations-management"
+<div id="rr-at-manufacturing-service-operations-management"
 class="section level3">
-<h3><em>Major Revision</em> at <strong>Manufacturing &amp; Service
-Operations Management</strong></h3>
+<h3><em>R&amp;R</em> at <strong>Manufacturing &amp; Service Operations
+Management</strong></h3>
 </div>
 <div
 id="winner-poms-college-of-sustainable-operations-best-student-paper-competition"
@@ -356,19 +356,13 @@ of Sustainable Operations, Best Student Paper Competition</a></h3>
 <div
 id="the-effect-of-employee-lateness-and-absenteeism-on-store-performance-with-ananth-raman."
 class="section level2">
-<h2>4. <a
-href="https://www.dropbox.com/s/hqu3u7kst8qtkc9/Lateness_and_Absenteeism.pdf?raw=1">The
-Effect of Employee Lateness and Absenteeism on Store Performance</a>
-with <a
+<h2>4. <a href="">The Effect of Employee Lateness and Absenteeism on
+Store Performance</a> with <a
 href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
 Raman</a>.</h2>
 <div id="under-revision" class="section level3">
 <h3>Under Revision</h3>
-</div>
-<div id="ssrn-link" class="section level3">
-<h3><a
-href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4189723">SSRN
-Link</a></h3>
+<!-- ### [SSRN Link](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4189723) -->
 <!-- ### [Dropbox Link](https://www.dropbox.com/s/hqu3u7kst8qtkc9/Lateness_and_Absenteeism.pdf?raw=1), [SSRN Link](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4189723) -->
 <hr />
 </div>
@@ -376,16 +370,14 @@ Link</a></h3>
 <div
 id="human-computer-interactions-in-demand-forecasting-and-labor-scheduling-decisions-with-ananth-raman-and-jorge-tamayo"
 class="section level2">
-<h2>5. <a
-href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4296344">Human-Computer
-Interactions in Demand Forecasting and Labor Scheduling Decisions</a>
-with <a
+<h2>5. <a href="">Human-Computer Interactions in Demand Forecasting and
+Labor Scheduling Decisions</a> with <a
 href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
 Raman</a> and <a
 href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1063486">Jorge
 Tamayo</a></h2>
-<div id="submitted" class="section level3">
-<h3>Submitted</h3>
+<div id="rr-at-management-science" class="section level3">
+<h3><em>R&amp;R</em> at <strong>Management Science</strong></h3>
 <hr />
 <!-- ## 6. [The Effects of Fair Workweek Laws on Store Performance: Evidence from Chicago](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4351186) with [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534). -->
 <!-- ### Submitted -->
