--- a/index.html
+++ b/index.html
@@ -357,22 +357,23 @@ $(document).ready(function () {
 University. I am advised by Professor <a
 href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
 Raman</a>.</p>
-<p>My dissertation explores the associations between managerial talent,
-labor scheduling decisions, and firm performance. In addition, I am
-interested in how retailers use algorithms to automate their labor
-scheduling decisions. Please see the <a
-href="https://calebkwon.com/research.html">Research</a> tab for my
-papers.</p>
+<p>My research explores the associations between managerial talent,
+labor scheduling decisions, automation, and firm performance. Please see
+the <a href="https://calebkwon.com/research.html">Research</a> tab for
+my papers. As part of my research agenda, I am a consultant to a major
+technology company that develops and sells algorithms to firms in
+multiple industries.</p>
 <p>In addition to my research, I have been involved in various teaching
 assignments during my PhD. At Harvard, I have served as a teaching
 fellow in the full-time MBA program at HBS, and was an executive coach
 in the <a
 href="https://www.exed.hbs.edu/leadership-development/">Program For
-Leadership Development</a> Executive Education program. Additionally, I
-served as a teaching fellow in the Executive Education Program at the
-University of Chicago Booth School of Business (London and Hong
-Kong).</p>
-<!-- Please see the [Research](https://calebkwon.com/research.html) tab for my papers. My dissertation committee consists of Professors [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534) (Chairperson), [Antonio Moreno](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1029325), and [Jorge Tamayo](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1063486).   -->
+Leadership Development</a> Executive Education program. At the
+University of Chicago, I served as a teaching fellow in the Executive
+Education Program at the Booth School of Business (London and Hong
+Kong). Finally, I am an MBA course instructor at Boston College Caroll
+School of Management, where I teach data science and coding for
+business.</p>
 <p>Prior to Harvard, I received a B.A. in Economics from Simon Fraser
 University, and an M.A in Economics from Northwestern University.</p>
 </div>
