--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@ Raman</a>.</p>
 <p>My research explores the associations between managerial talent,
 labor scheduling decisions, automation, and firm performance. Please see
 the <a href="https://calebkwon.com/research.html">Research</a> tab for
-my papers. As part of my research agenda, I am a consultant to a major
+my papers. Related to my research agenda, I am a consultant to a major
 technology company that develops and sells algorithms to firms in
 multiple industries.</p>
 <p>In addition to my research, I have been involved in various teaching
