--- a/research.html
+++ b/research.html
@@ -403,6 +403,18 @@ Raman</a>.</h2>
 <!-- ## 9. On the Interactions Between the Minimum Wage and Fair Workweek Laws  [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534). -->
 <!-- --- -->
 </div>
+<div
+id="understanding-the-effects-of-fair-workweek-laws-on-worker-schedules-and-employment-with-ananth-raman."
+class="section level2">
+<h2>8. Understanding the Effects of Fair Workweek Laws on Worker
+Schedules and Employment with <a
+href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
+Raman</a>.</h2>
+<div id="submitted." class="section level3">
+<h3>Submitted.</h3>
+<hr />
+</div>
+</div>
 </div>
 <div id="cases-and-teaching-material" class="section level1">
 <h1>Cases and Teaching Material:</h1>
