--- a/index.html
+++ b/index.html
@@ -357,22 +357,22 @@ $(document).ready(function () {
 University. I am advised by Professor <a
 href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
 Raman</a>.</p>
-<p>My research explores the associations between managerial talent,
-labor scheduling decisions, automation, and firm performance. Please see
-the <a href="https://calebkwon.com/research.html">Research</a> tab for
-my papers. Related to my research agenda, I am a consultant to a major
-technology company that develops and sells algorithms to firms in
-multiple industries.</p>
-<p>In addition to my research, I have been involved in various teaching
-assignments during my PhD. At Harvard, I have served as a teaching
-fellow in the full-time MBA program at HBS, and was an executive coach
-in the <a
+<p>My research investigates the connections between managerial talent,
+labor scheduling decisions, automation, and firm performance. For more
+details on my papers, please visit the <a
+href="https://calebkwon.com/research.html">Research Section</a> of my
+website. As part of my research endeavors, I also work as a consultant
+for a major technology company that creates and offers algorithmic
+solutions to firms across various industries.</p>
+<p>During my PhD, I have actively participated in multiple teaching
+roles. At Harvard, I have been a teaching fellow in the full-time MBA
+program at HBS and acted as an executive coach in the <a
 href="https://www.exed.hbs.edu/leadership-development/">Program For
-Leadership Development</a> Executive Education program. At the
-University of Chicago, I served as a teaching fellow in the Executive
-Education Program at the Booth School of Business (London and Hong
-Kong). Finally, I am an MBA course instructor at Boston College Caroll
-School of Management, where I teach data science and coding for
+Leadership Development Executive Education program</a>. I have also
+served as a teaching fellow in the Executive Education Program at the
+Booth School of Business (London and Hong Kong) at the University of
+Chicago. Additionally, I am an MBA course instructor at Boston College
+Carroll School of Management, where I teach data science and coding for
 business.</p>
 <p>Prior to Harvard, I received a B.A. in Economics from Simon Fraser
 University, and an M.A in Economics from Northwestern University.</p>
