--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <title>index.knit</title>
 
-<script src="site_libs/header-attrs-2.13/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.21/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/paper.min.css" rel="stylesheet" />
@@ -32,8 +32,8 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
-<link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-6.4.0/css/all.min.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-6.4.0/css/v4-shims.min.css" rel="stylesheet" />
 
 <style type="text/css">
   code{white-space: pre-wrap;}
@@ -144,11 +144,15 @@ $(document).ready(function () {
     href = "index.html";
   var menuAnchor = $('a[href="' + href + '"]');
 
-  // mark it active
-  menuAnchor.tab('show');
-
-  // if it's got a parent navbar menu mark it active as well
-  menuAnchor.closest('li.dropdown').addClass('active');
+  // mark the anchor link active (and if it's in a dropdown, also mark that active)
+  var dropdown = menuAnchor.closest('li.dropdown');
+  if (window.bootstrap) { // Bootstrap 4+
+    menuAnchor.addClass('active');
+    dropdown.find('> .dropdown-toggle').addClass('active');
+  } else { // Bootstrap 3
+    menuAnchor.parent().addClass('active');
+    dropdown.addClass('active');
+  }
 
   // Navbar adjustments
   var navHeight = $(".navbar").first().height() + 15;
@@ -177,8 +181,8 @@ $(document).ready(function () {
   border-radius: 4px;
 }
 
-.tabset-dropdown > .nav-tabs > li.active:before {
-  content: "";
+.tabset-dropdown > .nav-tabs > li.active:before, .tabset-dropdown > .nav-tabs.nav-tabs-open:before {
+  content: "\e259";
   font-family: 'Glyphicons Halflings';
   display: inline-block;
   padding: 10px;
@@ -186,16 +190,9 @@ $(document).ready(function () {
 }
 
 .tabset-dropdown > .nav-tabs.nav-tabs-open > li.active:before {
-  content: "&#xe258;";
-  border: none;
-}
-
-.tabset-dropdown > .nav-tabs.nav-tabs-open:before {
-  content: "";
+  content: "\e258";
   font-family: 'Glyphicons Halflings';
-  display: inline-block;
-  padding: 10px;
-  border-right: 1px solid #ddd;
+  border: none;
 }
 
 .tabset-dropdown > .nav-tabs > li.active {
@@ -353,20 +350,21 @@ $(document).ready(function () {
 <hr />
 <div id="caleb-kwon" class="section level1">
 <h1>Caleb Kwon</h1>
-<p>I’m a 4th year PhD Candidate in Operations Management at Harvard
+<p>I’m a 5th year PhD Candidate in Operations Management at Harvard
 University. I am advised by Professor <a
 href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
 Raman</a>.</p>
+<p><strong>I am on the 2023-2024 Job Market.</strong></p>
 <p>My research investigates the connections between managerial talent,
 labor scheduling decisions, automation, and firm performance. For more
 details on my papers, please visit the <a
 href="https://calebkwon.com/research.html">Research Section</a> of my
-website. As part of my research endeavors, I also work as a consultant
-for a major technology company that creates and offers algorithmic
-solutions to firms across various industries.</p>
-<p>During my PhD, I have actively participated in multiple teaching
-roles. At Harvard, I have been a teaching fellow in the full-time MBA
-program at HBS and acted as an executive coach in the <a
+website. As part of my research, I also work as a consultant for a major
+technology company that creates and offers algorithmic solutions to
+firms across various industries.</p>
+<p>During my PhD, I have participated in multiple teaching roles. At
+Harvard, I have been a teaching fellow in the full-time MBA program at
+HBS and acted as an executive coach in the <a
 href="https://www.exed.hbs.edu/leadership-development/">Program For
 Leadership Development Executive Education program</a>. I have also
 served as a teaching fellow in the Executive Education Program at the
