--- a/research.html
+++ b/research.html
@@ -351,34 +351,39 @@ of Sustainable Operations, Best Student Paper Competition</a></h3>
 </div>
 </div>
 <div
-id="the-effect-of-employee-lateness-and-absenteeism-on-store-performance-with-ananth-raman."
+id="the-effects-of-inconsistent-work-schedules-on-employe-lateness-and-absenteeism-2023-with-ananth-raman."
 class="section level2">
-<h2>4. <a href="">The Effect of Employee Lateness and Absenteeism on
-Store Performance</a> with <a
+<h2>4. <a href="">The Effects of Inconsistent Work Schedules on Employe
+Lateness and Absenteeism</a> (2023) with <a
 href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
 Raman</a>.</h2>
-<div id="under-revision" class="section level3">
-<h3>Under Revision</h3>
+<div id="under-review-at-manufacturing-service-operations-management"
+class="section level3">
+<h3>Under Review at <strong>Manufacturing &amp; Service Operations
+Management</strong></h3>
 <!-- ### [SSRN Link](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4189723) -->
 <!-- ### [Dropbox Link](https://www.dropbox.com/s/hqu3u7kst8qtkc9/Lateness_and_Absenteeism.pdf?raw=1), [SSRN Link](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4189723) -->
 <hr />
 </div>
 </div>
 <div
-id="human-computer-interactions-in-demand-forecasting-and-labor-scheduling-decisions-with-ananth-raman-and-jorge-tamayo"
+id="human-computer-interactions-in-demand-forecasting-and-labor-scheduling-decisions-2022-with-ananth-raman-and-jorge-tamayo"
 class="section level2">
 <h2>5. <a href="">Human-Computer Interactions in Demand Forecasting and
-Labor Scheduling Decisions</a> with <a
+Labor Scheduling Decisions</a> (2022) with <a
 href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
 Raman</a> and <a
 href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1063486">Jorge
 Tamayo</a></h2>
 <div id="rr-at-management-science" class="section level3">
 <h3><em>R&amp;R</em> at <strong>Management Science</strong></h3>
+<div id="first-draft-may-21-2022." class="section level4">
+<h4>First Draft: May 21, 2022.</h4>
 <hr />
 <!-- ## 6. [The Effects of Fair Workweek Laws on Store Performance: Evidence from Chicago](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4351186) with [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534). -->
 <!-- ### Submitted -->
 <!-- --- -->
+</div>
 </div>
 </div>
 <div
@@ -401,14 +406,43 @@ Raman</a>.</h2>
 <!-- --- -->
 </div>
 <div
-id="understanding-the-effects-of-fair-workweek-laws-on-worker-schedules-and-employment-with-ananth-raman."
+id="the-effects-of-fair-workweek-laws-on-worker-schedules-evidence-from-chicago-2023-with-ananth-raman."
 class="section level2">
-<h2>8. Understanding the Effects of Fair Workweek Laws on Worker
-Schedules and Employment with <a
+<h2>8. <a
+href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4542956">The
+Effects of Fair Workweek Laws on Worker Schedules: Evidence from
+Chicago</a> (2023) with <a
 href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
 Raman</a>.</h2>
-<div id="submitted." class="section level3">
-<h3>Submitted.</h3>
+<div id="rejected-with-invitation-to-resubmit-at-management-science"
+class="section level3">
+<h3>Rejected, with invitation to Resubmit at <strong>Management
+Science</strong></h3>
+<div
+id="note-new-results-that-include-results-from-los-angeles-fair-workweek-law-coming-soon."
+class="section level4">
+<h4>Note: New results that include results from Los Angeles’ Fair
+Workweek Law coming soon.</h4>
+<hr />
+</div>
+</div>
+</div>
+<div
+id="the-effects-of-fair-workweek-laws-on-store-performance-evidence-from-chicago-and-los-angeles-with-ananth-raman."
+class="section level2">
+<h2>9. <a href="">The Effects of Fair Workweek Laws on Store
+Performance: Evidence from Chicago and Los Angeles</a> with <a
+href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
+Raman</a>.</h2>
+<div
+id="note-original-paper-included-only-results-from-chicago.-new-paper-that-includes-results-from-los-angeles-fair-workweek-law-coming-soon."
+class="section level4">
+<h4>Note: Original paper included only results from Chicago. New paper
+that includes results from Los Angeles’ Fair Workweek Law coming
+soon.</h4>
+</div>
+<div id="first-draft-november-21-2022." class="section level4">
+<h4>First Draft: November 21, 2022.</h4>
 <hr />
 </div>
 </div>
@@ -473,6 +507,20 @@ class="section level3">
 <h3><strong>Harvard Business School Supplement 622-053</strong>, January
 2022</h3>
 <hr />
+</div>
+</div>
+</div>
+<div id="resting-papers" class="section level1">
+<h1>Resting Papers</h1>
+<div
+id="the-effect-of-employee-lateness-and-absenteeism-on-store-performance-with-ananth-raman."
+class="section level2">
+<h2>1. <a href="">The Effect of Employee Lateness and Absenteeism on
+Store Performance</a> with <a
+href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
+Raman</a>.</h2>
+<div id="under-revision" class="section level3">
+<h3>Under Revision</h3>
 </div>
 </div>
 </div>
