--- a/CV.html
+++ b/CV.html
@@ -306,7 +306,7 @@ $(document).ready(function () {
 <div id="curriculum-vitae" class="section level1">
 <h1>Curriculum Vitae</h1>
 <p><a
-href="https://www.dropbox.com/s/34rby97o4o7gqw3/res4.pdf?raw=1">PDF
+href="https://www.dropbox.com/scl/fi/hkkf2rwsrvhhq3vr7kgjz/res4.pdf">PDF
 Version</a></p>
 </div>
 <div id="personal-information" class="section level1">
