--- a/index.html
+++ b/index.html
@@ -354,7 +354,8 @@ $(document).ready(function () {
 University. I am advised by Professor <a
 href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534">Ananth
 Raman</a>.</p>
-<p><strong>I am on the 2023-2024 Job Market.</strong></p>
+<p><strong>I am on the 2023-2024 Job Market. I will be available for
+interviews at INFORMS 2023.</strong></p>
 <p>My research investigates the connections between managerial talent,
 labor scheduling decisions, automation, and firm performance. For more
 details on my papers, please visit the <a
